<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="about">About</string>
    <string name="ampmtimes">Show times as am/pm</string>
    <string name="app_description">Grand River Transit details for the Region of Waterloo, Ontario, Canada.\n\nAll data for this application is freely available in Google GTFS format from http://www.grt.ca</string>
    <string name="app_credits">Version: %1$s (internal %2$d), DB %3$d\n\nAuthor: Giles Malet\ngdmalet+GRTransit@gmail.com</string>
    <string name="app_name">Grand River Transit</string>
    <string name="app_short_name">GRTransit</string>
    <string name="auto_check4dbupdate">Check online for schedule updates</string>
    <string name="button_routes">Routes</string>
    <string name="button_stops">Stops</string>
    <string name="calendar_expired">Your schedule data has apparently expired. Try set the preference to allow updates, and restart to update.</string>
    <string name="cancel">Cancel</string>
    <string name="closest_stops">Closest stops</string>
    <string name="cntinue">Continue</string>
    <string name="corrupt_exit">If you continue things may go downhill fast.</string>
    <string name="db_is_awol">Unable to open the schedule database.</string>
    <string name="db_download_now">Download %1$1.1f megs now?</string>
    <string name="db_downloading">Downloading the schedule database</string>
    <string name="db_is_corrupt">The new database is corrupt or incomplete.</string>
    <string name="db_new_avail">A new schedule database is available.</string>
    <string name="db_not_avail">You need to download the schedule database.</string>
    <string name="db_opening">Checking schedule database versions&#8230;</string>
    <string name="exit">Exit</string>
    <string name="favs_add_to_list">Add to your list of favourites?</string>
    <string name="favs_remove_from_list">Remove from your list of favourites?</string>
    <string name="favs_reorder_item">Reorder in your list?</string>
    <string name="find_route">Find a route</string>
    <string name="find_stop">Find a stop</string>
    <string name="ga_api_key">UA-27006918-1</string>
    <string name="last_location_fix">No recent location fix, using previous</string>
    <string name="legal_notices">Legal notices:</string>
    <string name="loading_routes">Loading the bus routes…</string>
    <string name="loading_stops">Loading the bus stops…</string>
    <string name="loading_times">Loading the bus times…</string>
    <string name="longpress_adds_stop">Long press a stop to add to favourites.</string>
    <string name="longpress_removes_stop">Search to add stops, long press to remove.</string>
    <string name="menu_settings">Settings</string>
    <string name="mylocation">My location</string>
    <string name="no">No</string>
    <string name="no_favourites">Use the search facility from the menu to find stops, or locate them on the map, and long-press to add them to your favourites list. Then a click shows all routes using that stop, and another shows the times.\n\nTo remove a favourite, long-press on the favourites list.</string>
    <string name="no_location_fix">No usable location fix! Searching....</string>
    <string name="no_more_busses">No more busses today.</string>
    <string name="preferences">Preferences</string>
    <string name="pref_ampmtimes_key">ampmtimes</string>
    <string name="pref_db_autoupdate_key">autodbupdate</string>
    <string name="pref_favstops_key">favstops</string>
    <string name="pref_showallbusses_key">showallbusses</string>
    <string name="pref_uuid_key">uuid</string>
    <string name="refresh">Refresh</string>
    <string name="rider_alerts">Rider alerts</string>
    <string name="route_fling">Swipe left to show all routes, or tap to show one.</string>
    <string name="search_hint">Enter search text</string>
    <string name="showallbusses">Show busses for all days</string>
    <string name="showmap">Show map</string>
    <string name="stop_unused">No routes use this stop in the current schedule.</string>
    <string name="tap_time_for_route">Tap a time to show one route.</string>
    <string name="tap_time_for_trip">Tap a time to show the trip.</string>
    <string name="title_activity_closest_stops">Closest Stops</string>
    <string name="title_favourites">Favourite Stops</string>
    <string name="title_mapstops">Transit Stops</string>
    <string name="title_rider_alerts">GRT Rider Alerts</string>
    <string name="title_search">Search bus stops or routes</string>
    <string name="twitter_fetch_failed">Failed to contact Twitter - make sure you have an Internet connection.</string>
    <string name="twitter_fetch_nothing">Twitter returned nothing (there are no recent tweets).</string>
    <string name="twitter_querying_feed">Querying @GRT_ROW&#8230;</string>
    <string name="yes">Yes</string>

</resources>
